--- a/Source/Server/apps/mpconsole/templates/software/software_package_modify.html
+++ b/Source/Server/apps/mpconsole/templates/software/software_package_modify.html
@@ -243,6 +243,7 @@
 						<div id="right"> &nbsp; </div>
 					</div>
 				</div> <!-- End Step 3 -->
+                <!--
 				<div id="step-4">
 					<div id="wrapper">
 						<div style="float:left;" id="1"><h4>Install Requisites &amp; Save</h4></div>
@@ -307,7 +308,8 @@
 						{% endfor %}
 					</div>
 					<input type="hidden" id="postid" value="{{data['PKGPOSTREQ']|length or 0}}">
-				</div> <!-- End Step 4 -->
+				</div> -->
+                <!-- End Step 4 -->
 
 			</div>
 		</td>
