--- a/Source/Server/apps/mpconsole/templates/software/software_pkg_wizard.html
+++ b/Source/Server/apps/mpconsole/templates/software/software_pkg_wizard.html
@@ -376,6 +376,7 @@
 					</div>
 				</div>
 			</section>
+            <!-- Not 100% Completed
 			<h1>Save</h1>
 			<section>
 				<h4>Install Requisites &amp; Save</h4>
@@ -403,6 +404,7 @@
 					</div>
 				</div>
 			</section>
+			-->
 		</div>
 		<input type="hidden" name="suuid" value="{{data['SUUID']}}">
 	</form>
