--- a/Source/MacPatch/MacPatch/MacPatch/UpdatesVC.xib
+++ b/Source/MacPatch/MacPatch/MacPatch/UpdatesVC.xib
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none" useAutolayout="YES" customObjectInstantitationMethod="direct">
+<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="14490.70" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none" useAutolayout="YES" customObjectInstantitationMethod="direct">
     <dependencies>
         <deployment identifier="macosx"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="14460.31"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="14490.70"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
@@ -105,7 +105,7 @@
                                                     <imageView horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="fiv-lY-SBo">
                                                         <rect key="frame" x="6" y="29" width="48" height="48"/>
                                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
-                                                        <imageCell key="cell" refusesFirstResponder="YES" alignment="left" imageScaling="proportionallyUpOrDown" image="appstoreTemplate" id="IKj-9G-3k6"/>
+                                                        <imageCell key="cell" refusesFirstResponder="YES" alignment="left" imageScaling="proportionallyDown" image="appStoreImage" id="IKj-9G-3k6"/>
                                                     </imageView>
                                                     <imageView horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Usv-jM-0LC">
                                                         <rect key="frame" x="20" y="6" width="20" height="20"/>
@@ -334,8 +334,8 @@
         </customView>
     </objects>
     <resources>
-        <image name="GoodImage" width="16" height="16"/>
+        <image name="GoodImage" width="32" height="32"/>
+        <image name="appStoreImage" width="64" height="64"/>
         <image name="appleImage" width="80" height="95"/>
-        <image name="appstoreTemplate" width="64" height="64"/>
     </resources>
 </document>
